fix for squishy map

--- a/client_side/css/newtk.css
+++ b/client_side/css/newtk.css
@@ -95,9 +95,11 @@
 }
 
 #map {
-  width: 100%;
+  max-width: 100%;
   height: 950px;
 }
+
+#map img{max-width:none}
 
 #map-canvas{
   margin: 0; 
